--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -71,6 +71,7 @@ main {
 
 input[type=range] {
   -webkit-appearance: none;
+  appearance: none;
   width: 100%;
   background: transparent;
 }
@@ -195,9 +196,7 @@ input[type=range]::-ms-track {
   overflow-y: auto;
 }
 
-.graph-view {
-  /* Reverted to default size */
-}
+
 
 .simulation-table {
   width: 100%;
