--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -234,7 +234,7 @@ input[type=range]::-webkit-slider-thumb {
 .tooltip-divider {
   border: none;
   border-top: 1px solid var(--card-border-color);
-  margin: 0.75rem 0 0 0;
+  margin: 0.75rem 0 0;
   opacity: 0.6;
 }
 
